<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_breathing_problem_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iamshekhargh.heartattackandroid.BreathingProblemOne"
    android:background="#4298b5">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/do_you_have_breathing_problems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_question1"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="casual"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#adc4cc"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/not_at_all"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton8"
                android:layout_weight="1"
                android:textColor="#adc4cc"
                android:textSize="36sp"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <RadioButton
                android:text="@string/yes_sometimes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton7"
                android:layout_weight="1"
                android:textColor="#adc4cc"
                android:textSize="36sp"
                android:paddingTop="@dimen/activity_vertical_margin"/>

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_action_name"
            android:id="@+id/imageButton2"
            android:layout_weight="1"
            android:rotationX="180"
            android:rotationY="180"
            android:rotation="180" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"></LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_action_name"
            android:id="@+id/imageButton"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
